--- a/r-tree.html
+++ b/r-tree.html
@@ -32,9 +32,16 @@
         border: 4px solid red;
         z-index: 0;
     }
+	
+	#rules{
+		text-align:center;
+		font-size:24px;
+		top:2px;
+	}
 </style>
 
 <body>
+<p id="rules">Please click anywhere to add some points to the R-Tree index.</p>
 </body>
 
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
@@ -297,6 +304,8 @@
         $("body").append($("<div class='rect' id = '" + root.id + "'></div>"))
 
         $("body").click(function (e) {
+			if(pC == 0)
+				$("#rules").remove()
             xs.push(e.pageX); ys.push(e.pageY)
             $("body").append($("<div class='point' id = '#point-" + pC + "'></div>").css("top", e.pageY - point_radius).css("left", e.pageX - point_radius))
             insertPoint(pC)
